--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -332,7 +332,7 @@
         }  
 
         .dropdown .hamburger-links a{
-            color: #fff; 
+            color: white; 
             display: flex; 
             text-decoration: none; 
             justify-content: center; 
