Fixing the hamburger background color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -343,7 +343,8 @@
         } 
 
         .dropdown .hamburger-links a:hover{
-            background-color: gray;
+            background-color: rgba(128, 128, 128, 0.6); 
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.5);
         } 
 
         /* Responsive */
